<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!--The list of clickable buttons for the drawer -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_tours"
            android:title="@string/tours" />
        <item
            android:id="@+id/nav_discount"
            android:title="@string/discount" />
        <item
            android:id="@+id/nav_membership"
            android:title="@string/membership"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>

</menu>